glx/testdata/invalid/assertion-participant-invalid-role.glx
# Invalid: participant.role references non-existent role
# This should fail validation - broken vocabulary reference

persons:
  person-john:
    version: "1.0"
    properties:
      primary_name: "John Smith"

events:
  event-marriage:
    version: "1.0"
    type: marriage

sources:
  source-cert:
    version: "1.0"
    title: "Certificate"

citations:
  citation-cert:
    version: "1.0"
    source: source-cert

# This is INVALID - role does not exist in participant_roles vocabulary
assertions:
  assertion-invalid:
    version: "1.0"
    subject: event-marriage
    participant:
      person: person-john
      role: invalid-role  # ERROR: this role doesn't exist in vocabulary
    citations:
      - citation-cert
    confidence: high

